# ICTGP

./: .gitignore  LICENSE  README.md
AAI/AAI/: AAI.sln  AAI.vcxproj  AAI.vcxproj.filters  DisjointSet.cpp  DisjointSet.h  Maze.cpp  Maze.h  Progam.cpp  Program.h
AAI/AAI/Test/: Base.cpp  DisjointSetTest.cpp  MazeTest.cpp  MazeTest.h
AAI/AAI/Week1/: DisjointSet.cpp  DisjointSet.h  Maze.cpp  Maze.h  NQueens.cpp  NQueens.h
AAI/AAI/enc_temp_folder/5dfe26affac80ad9b824781527957/: DisjointSet.cpp
AAI/AAI/lib/: info.txt
AAI/Assignment/Assignment/: Assignment.csproj  Assignment.sln  Form1.Designer.cs  Form1.cs  Program.cpp  Program.cs  Program.h  Settings.cs  Utilities.cs  settings.ini
AAI/Assignment/Assignment/Entity/: BaseEntity.cs  Entity.h  EntityType.cs  Herbivore.cs  Omnivore.cs
AAI/Assignment/Assignment/Fuzzy/: AssociativeMatrix.cs  FileManager.cs  FuzzyMachine.cs  Graph.cs  GraphSection.cs  RuleSet.cs
AAI/Assignment/Assignment/Movement/: Arrive.cs  BaseSteering.cs  Explore.cs  Flee.cs  Flocking.cs  Hide.cs  ObstacleAvoidance.cs  PathFollowing.cs  PathFollowingTimeSliced.cs  Pathfinding.cs  Seek.cs  SteeringForce.cs  SteeringForceCalculationType.cs  Wander.cs
AAI/Assignment/Assignment/Movement/Planning/: AStarTimeSliced.cs  ISearchTimeSliced.cs  PathPlanner.cs  Pathfinding.cs  SearchStatus.cs
AAI/Assignment/Assignment/Obstacle/: BaseObstacle.cs  Bush.cs  ObstacleCircle.cs  Rock.cs  Tree.cs
AAI/Assignment/Assignment/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
AAI/Assignment/Assignment/Renderer/: MainForm.Designer.cs  MainForm.cs  Rendering.cs
AAI/Assignment/Assignment/State/: BaseState.cs  FindFoodState.cs  ScriptManager.cs  StateMachine.cs
AAI/Assignment/Assignment/Steering/: Steering.h
AAI/Assignment/Assignment/Utilities/: PriorityQueue.cs  Utilities.cs  Utility.cs
AAI/Assignment/Assignment/World/: BaseObject.cs  GameWorld.cs  Graph.cs  Grid.cs  GridCell.cs  ImageManager.cs  Location.cs  PathManager.cs
AAI/Assignment/Assignment/fuzzyrules/: graphs.txt  rules.txt
AAI/Assignment/Assignment/scripts/: herbivore.lua  omnivore.lua
AAI/Assignment/Assignment/scripts/herbivore/: attack.lua  eating.lua  findfood.lua  flee.lua  hide.lua  sleep.lua  test.lua  wander.lua
AAI/Assignment/Assignment/scripts/omnivore/: attack.lua  eat.lua  hide.lua  patrol.lua
AAI/Assignment/Report/: references.bib  report.bib  report.tex
AAI/Assignment/Report/images/: stateuml.uxf
AAI/SjoerdCS/: Form1.Designer.cs  Form1.cs  Program.cs  SjoerdCS.csproj
AAI/SjoerdCS/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
AAI/SjoerdCS/TicTacToe/: TicTacToe.cs  TicTacToeForm.Designer.cs  TicTacToeForm.cs
AAI/SjoerdOpenGL/: Assignment.sln
AAI/SjoerdOpenGL/Assignment/: fragmentshader.fsh  vertexshader.vsh
AAI/SjoerdOpenGL/Assignment/Debug/: vc141.idb
AAI/SjoerdOpenGL/Assignment/Debug/Assignment.tlog/: Assignment.lastbuildstate  Assignment.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
AAI/SjoerdOpenGL/Assignment/Steering/: Steering.cpp  SteeringForce.h
AAI/SjoerdOpenGL/Assignment/x64/Debug/: vc141.idb
AAI/Tim/: CMakeLists.txt  main.cpp
AAI/Tim/Week1/: DisjointSet.cpp  DisjointSet.h  FamilyAtTheBridge.cpp  FamilyAtTheBridge.h  Maze.cpp  Maze.h  NQueens.cpp  NQueens.h  Person.cpp  Person.h  Program.cpp  Program.h
AAI/TimCS/WinTictacToeCS/: ComputerPlayer.cs  FormMain.Designer.cs  FormMain.cs  Move.cs  Program.cs  TicTacToe.cs  WinTicTacToeCS.csproj
AAI/TimCS/WinTictacToeCS/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
CG/FinalAssignmentTim/: CMakeLists.txt
CG/FinalAssignmentTim/res/shaders/: Basic.glsl  Lambert.glsl
CG/FinalAssignmentTim/src/: Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Model.cpp  Model.h  MyMacros.cpp  MyMacros.h  Object.cpp  Object.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  main.cpp
CG/FinalAssignmentTim/src/Shader/: BasicShader.cpp  BasicShader.h  LambertShader.cpp  LambertShader.h  Shader.cpp  Shader.h
CG/FinalAssignmentVS/Debug/: Program1.ilk
CG/FinalAssignmentVS/Program1/: MyMacros.cpp  MyMacros.h  basicfragmentshader.fsh  basicvertexshader.vsh  fragmentshader.fsh  glsl.cpp  glsl.h  main.cpp
CG/FinalAssignmentVS/Program1/Debug/: vc141.idb
CG/FinalAssignmentVS/Program1/Debug/Program1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Program1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CG/L1-Neighbourhood/: car.js  house.js  index.html  lamppost.js  scene.js  skybox.js  team.txt  terrain.js  tree.js
CG/L1-Neighbourhood/ModelsAndTextures/car/: police-car.json
CG/Sjoerd/: index.html  scene.js
CG/Sjoerd/CS/CG/: CG.csproj  CG.sln  Matrix.cs  Program.cs  Vector.cs
CG/Tim/: scene.js
CG/Tim/CS/Week2/: AxisX.cs  AxisY.cs  Form1.cs  Matrix.cs  Program.cs  Square.cs  Vector.cs
CG/Tim/LinearAlgebra/: CMakeLists.txt  Matrix.cpp  Matrix.h  Vector.cpp  Vector.h  main.cpp
CG/Tim/OpenGLTest/: CMakeLists.txt  main.cpp
CPP/Sjoerd/CPP/: CPP.sln  Program.cpp  output.txt  sample.txt
CPP/Sjoerd/CPP/file/: fileio.cpp  fileio.h
CPP/Sjoerd/CPP/operator/: OperatorOverlaod.cpp  OperatorOverlaod.h  testoperator.cpp  testoperator.h
CPP/Sjoerd/CPP/templates/: stack.cpp  stack.h
CPP/Sjoerd/CPP/testtentatmen/: BinarySearchTree.cc  BinarySearchTree.h  file.cpp  file.h
CPP/Tim/: CMakeLists.txt  main.cpp
CPP/Tim/Exam/: CMakeLists.txt  Hash_Table.cpp  Hash_Table.h  ICT.GP.CPP-1097561-TimHintzbergen  Main1.cpp  Main2.cpp  Main3.cpp  Main4.cpp  README.txt  excersize2.cpp  excersize2.h  linked_list.cpp  linked_list.h  player.struct
CPP/Tim/PracticeExam/: BST.cpp  BST.h  BigInt.cpp  BigInt.h  DLLNode.cpp  DLLNode.h  DoublyLinkedList.cpp  DoublyLinkedList.h  Program.cpp
CPP/Tim/Week1/: Week1.cpp  Week1.h
CPP/Tim/Week2/: MyLibraryTest.cpp  MyStaticLibrary.cpp  MyStaticLibrary.h  Program.cpp  Program.h
CPP/Tim/Week4/: Program.cpp  Program.h
(+160 files in other folders)
